/api/pointAttributes/:attributeId/unique/:property route
