# api/src/database/mongoDb/models/pointAttributesModel.js
@@ -1,4 +1,5 @@
 const mongoose = require('mongoose');
+const APIError = require('../../../helpers/APIError');
 const { POINT_ATTRIBUTES_COLLECTION } = require('../dbSchemas/pointAttributeSchema');
 const { filterCoordinates } = require('../filters');
 
@@ -18,4 +19,27 @@ const getFilteredPointAttributes = async (attributeId, bottomLeft, topRight) => 
   return attributes;
 };
 
-module.exports = { getFilteredPointAttributes };
+const getUniqueValues = async (attributeId, property) => {
+  const { connection } = mongoose;
+  const { db } = connection;
+
+  if (!attributeId || !property) {
+    throw new APIError('AttributeId or property missing', 400, false);
+  }
+
+  const values = await db
+    .collection(POINT_ATTRIBUTES_COLLECTION)
+    .aggregate([
+      { $match: { 'properties.attributeId': attributeId } },
+      {
+        $group: {
+          _id: `properties.${property}`,
+        },
+      },
+      { $sort: { _id: 1 } },
+    ])
+    .toArray();
+  return values.map((item) => item._id);
+};
+
+module.exports = { getFilteredPointAttributes, getUniqueValues };
